# GLADR

./: .gitignore  Untitled.ipynb  context.md  import_data.ipynb  main.py  plan.md  process_histology_report.ipynb  pyproject.toml  readme.md
.ipynb_checkpoints/: import_data-checkpoint.ipynb  process_histology_report-checkpoint.ipynb
deliverables/sbns_submission/files/: SBNS_GBM_analysis.ipynb  SBNS_abstract_calculations_final.xlsx  raw_03_05_26.xlsx  ~$SBNS_abstract_calculations_final.xlsx
deliverables/sbns_submission/reference/: GBM_Deck_Style_Reference.md
examples/starter_project/: README.md  project.json
gladr.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: import_data.ipynb
notebooks/exploratory/: correlation_analysis.py  process_histology_report.ipynb
notebooks/marimo/session/: correlation_analysis.py.json
outputs/analysis/: latest.json
outputs/analysis/artifacts/: cohort_summary_20260419_192846.json  cox_regression_20260510_205054.json  cox_regression_20260510_205606.json  cox_regression_20260510_210233.json  lasso_logistic_regression_20260525_111707.json  lasso_logistic_regression_20260526_231422.json  lasso_logistic_regression_20260526_231500.json  lasso_logistic_regression_20260526_232748.json  lasso_logistic_regression_20260526_232842.json  (+63 more)
outputs/clean/: latest.json  run_manifest_20260419_185354.json  run_manifest_20260419_194518.json
outputs/stats/: age_distribution_20260419_190912.json  age_distribution_20260419_192846.json  age_distribution_20260419_194518.json  cohort_summary_20260419_190912.json  cohort_summary_20260419_194518.json
scripts/: ingest_data.py  stats.py  visualize.py
src/gladr/: __init__.py  cli.py
src/gladr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gladr/analysis/: README.md  (+6 more)
tests/: test_analysis_templates.py  test_dashboard_manifest_loader.py  test_dashboard_server.py  test_dashboard_static_app.py  test_discovery.py  test_histology_ingestion.py  test_ingestion_workbench.py  test_latest_pointer.py  test_module_context.py  test_project_registry.py  test_registry_ingestion_manifest.py
(+257 files in other folders)
