[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gladr"
version = "0.1.0"
description = "Clinical registry analysis pipeline scaffold for GLADR"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyterlab>=4.5.0",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
]

[project.scripts]
gladr = "gladr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
gladr = [
    "contracts/*.json",
    "ingest/*.md",
    "ingest/*.yaml",
    "ingest/contracts/*.json",
    "ingest/examples/*.csv",
    "ingest/examples/*.json",
    "analysis/*.md",
    "analysis/*.yaml",
    "analysis/contracts/*.json",
    "analysis/examples/*.json",
    "dashboard/*.md",
    "dashboard/*.yaml",
    "dashboard/contracts/*.json",
    "dashboard/examples/*.json",
    "dashboard/static_app/*.html",
]

[tool.setuptools.packages.find]
where = ["src"]
